scene/workspacescene: don't ignore forced software cursor for direct scanout

Otherwise it can end up being wrongly hidden.

BUG: 521953


(cherry picked from commit 6bcde148402c7077a726a8722395c35c8d9f0518)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>